finish plan meal details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="letsGetStarted">Let\'s get started:</string>
     <string name="continueAsGuest">Continue as a guest</string>
     <string name="loggingOut">Logging Out</string>
+    <string name="ingredients">"Ingredients: "</string>
 
     <string-array name="days_of_week">
         <item>Breakfast</item>
