--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,13 @@
     <string name="video">Video:</string>
     <string name="area">Area:</string>
     <string name="instructions">Instructions:</string>
+    <string name="monday">Monday</string>
+    <string name="lunch">Lunch</string>
+    <string name="connLost">Connection Lost</string>
+    <string name="connRestored">Back Online</string>
+    <string name="email">Email</string>
+    <string name="UserName">User Name</string>
+    <string name="password">Password</string>
 
     <string-array name="days_of_week">
         <item>Breakfast</item>
